# hotel

./: hotel.db  pyproject.toml
app/: __init__.py
app/db/: __init__.py  base.py
app/db/models/: room.py
app/routes/: room.py
app/templates/: add_room.html  base.html  edit_room.html  index.html  manage_rooms.html  navigation.html  reserved.html
